--- a/cryptoresult.html
+++ b/cryptoresult.html
@@ -34,7 +34,7 @@
   <header class="header" data-header>
     <div class="container">
 
-      <a href="#" class="logo">
+      <a href="./index.html" class="logo">
         <img src="./assets/logo.png" width="32" height="32" alt="CoinSphere logo">
         CoinSphere
       </a>
@@ -43,28 +43,37 @@
         <ul class="navbar-list">
 
           <li class="navbar-item">
-            <a href="#" class="navbar-link active" data-nav-link>Homepage</a>
-          </li>
-
-          <li class="navbar-item">
-            <a href="#" class="navbar-link" data-nav-link>Buy Crypto</a>
+            <a href="./index.html" class="navbar-link active" data-nav-link>Home</a>
           </li>
 
           <li class="navbar-item">
             <a href="#" class="navbar-link" data-nav-link>Markets</a>
           </li>
 
-          <li class="navbar-item">
-            <a href="#" class="navbar-link" data-nav-link>Sell Crypto</a>
-          </li>
+         
 
           <li class="navbar-item">
             <a href="#" class="navbar-link" data-nav-link>Blog</a>
           </li>
 
-          <li class="navbar-item">
-            <a href="#" class="navbar-link" data-nav-link>BITUSDT</a>
-          </li>
+        <!-- <li>
+          <div class="select-dropdown">
+            <select id="currency-select" >
+                <option value="usd">USD</option>
+                <option value="eur">EUR</option>
+                <option value="jpy">JPY</option>
+                <option value="gbp">GBP</option>
+                <option value="aud">AUD</option>
+                <option value="cad">CAD</option>
+                <option value="chf">CHF</option>
+                <option value="cny">CNY</option>
+                <option value="hkd">HKD</option>
+                <option value="nzd">NZD</option>
+                <option value="inr">INR</option>
+            </select>
+        </div>
+        
+        </li> -->
 
         </ul>
       </nav>
