--- a/index.html
+++ b/index.html
@@ -46,25 +46,17 @@
                         <a href="#" class="navbar-link active" data-nav-link>Home</a>
                     </li>
 
-                    <li class="navbar-item">
-                        <a href="#" class="navbar-link" data-nav-link>Buy Crypto</a>
-                    </li>
 
                     <li class="navbar-item">
                         <a href="#" class="navbar-link" data-nav-link>Markets</a>
                     </li>
 
-                    <li class="navbar-item">
-                        <a href="#" class="navbar-link" data-nav-link>Sell Crypto</a>
-                    </li>
 
                     <li class="navbar-item">
                         <a href="#" class="navbar-link" data-nav-link>Blog</a>
                     </li>
 
-                    <li class="navbar-item">
-                        <a href="#" class="navbar-link" data-nav-link>BITUSDT</a>
-                    </li>
+                    
 
                 </ul>
             </nav>
@@ -103,10 +95,10 @@
 
                     <div class="hero-content">
 
-                        <h1 class="h1 hero-title">Buy & Sell Digital Assets In The CoinSphere</h1>
+                        <h1 class="h1 hero-title">Trade Digital Assets Seamlessly with CoinSphere</h1>
 
                         <p class="hero-text">
-                            Coin CoinSphere is the easiest, safest, and fastest way to buy & sell crypto asset exchange.
+                            CoinSphere offers the simplest, most secure, and quickest platform for trading crypto assets.
                         </p>
                         <div class="search-form">
                             <input type="text" id="coin-search" class="form-control"
@@ -118,7 +110,7 @@
                     </div>
 
                     <figure class="hero-banner">
-                        <img src="./assets/hero-banner.png" width="570" height="448" alt="hero banner" class="w-100">
+                        <img src="./assets/appbanner.png" width="570" height="448" alt="hero banner" style="transform: scaleX(-1);" >
                     </figure>
 
                 </div>
