--- a/index.html
+++ b/index.html
@@ -370,13 +370,10 @@
         - #ABOUT
       -->
 
-            <section class="section about" aria-label="about" data-section>
+            <section class="section app " aria-label="app" data-section>
                 <div class="container">
 
-                    <figure class="about-banner">
-                        <img src="./assets/about-banner.png" width="748" height="436" loading="lazy" alt="about banner"
-                            class="w-100">
-                    </figure>
+                
 
                     <div class="about-content">
 
@@ -426,7 +423,10 @@
                         <a href="#" class="btn btn-primary">Explore More</a>
 
                     </div>
-
+                    <figure class="about-banner">
+                        <img src="./assets/intro_pc.png"  loading="lazy" alt="about banner"
+                       >
+                    </figure>
                 </div>
             </section>
 
@@ -438,9 +438,14 @@
         - #APP
       -->
 
-            <section class="section app" aria-label="app" data-section>
+            <section class="section about" aria-label="about" data-section>
                 <div class="container">
+                    <div class="app-banner">
+                        <img src="./assets/app-banner.png" width="618" height="526" loading="lazy" alt="app banner"
+                            class="w-100">
 
+                        <span class="span">Scan To Download</span>
+                    </div>
                     <div class="app-content">
 
                         <h2 class="h2 section-title">Free Your Money & Invest With Confident</h2>
@@ -491,12 +496,7 @@
 
                     </div>
 
-                    <div class="app-banner">
-                        <img src="./assets/app-banner.png" width="618" height="526" loading="lazy" alt="app banner"
-                            class="w-100">
-
-                        <span class="span">Scan To Download</span>
-                    </div>
+                  
 
                 </div>
             </section>
